<resources>
    <string name="app_name">AttendanceTrackingSystem</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_activity_faculty_main">FacultyMainActivity</string>
    <string name="students">Students</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>