<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:menuCategory="secondary"
            /></group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_student"
            android:title="@string/students"
            android:menuCategory="secondary"
            />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_TakeAttendance"
            android:title="@string/take_attendance"
            android:menuCategory="secondary"
            />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group4">
        <item
            android:id="@+id/nav_ViewAttendance"
            android:title="@string/view_attendance"
            android:menuCategory="secondary"
            />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group5">
        <item
            android:id="@+id/nav_changePassword"
            android:title="@string/change_password"
            android:menuCategory="secondary"
            />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group6">
         <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
             android:menuCategory="secondary"
             />

    </group>
</menu>